--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   "dependencies": {
     "react": "16.6.3",
     "react-native": "0.58.5",
+    "react-native-app-intro-slider": "^1.0.1",
     "react-native-gesture-handler": "^1.0.16",
+    "react-native-ratings": "^6.3.0",
     "react-native-vector-icons": "^6.3.0",
     "react-navigation": "^3.3.2"
   },
